Added changes for Bioinfo Summer School

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,5 +1,5 @@
 <div class="banner">
-  <a href="http://www.puntoyaprende.com/pbi/" title="Posgrado en Biologia Integrativa">
-    <img alt="Logo Posgrado Biologia Integrativa" src="img/posgrado_bi_logo.png" />
+  <a href="http://paginas.matem.unam.mx/bioinformatica/index.php" title="Escuela de Verano de Bioinformatica">
+    <img alt="Logo Escuela de Verano de Bioinformatica 2016" src="img/logo-bioinformatica2.png" />
   </a>
 </div>
