--- a/css/swc.css
+++ b/css/swc.css
@@ -162,7 +162,7 @@ body {
 }
 
 body.workshop, body.lesson {
-	background-color: #BBF0A1; /* Changed color for BI class */
+	background-color: #FFC44D; /* Changed color for BI class */
 	margin: 20px 0;
 }
 
