--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="generator" content="pandoc">
-    <title>Software Carpentry: $pagetitle$</title>
+    <title>Escuela de Verano de Bioinformática: $pagetitle$</title>
     $header$
   </head>
   <body class="lesson">
